# django_project

./: category_data.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_created_at.py  0003_alter_blog_created_at_alter_blog_view_count.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0002_version.py  0003_alter_version_is_current.py  0004_alter_version_product.py
catalog/templates/catalog/: base.html  contacts.html  home.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_catalog_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
