[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Alyona Starkova <alyona.starrkova@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
psycopg2 = "^2.9.9"
black = "^24.4.0"
pillow = "^10.3.0"
ipython = "^8.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
